--- a/js30#1.2-audio-player/styles.css
+++ b/js30#1.2-audio-player/styles.css
@@ -1,13 +1,22 @@
 body, html {
   padding: 0px;
   margin: 0px;
-  height: 100%;
+}
+
+
+p {
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 15px;
+  text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+  font-weight: bold;
 }
 
 .bg-img {
   background-image: url("./assets/img/Diplo\,\ SIDEPIECE\ -\ On\ My\ Mind.png");
-  filter: blur(8px) brightness(0,4) contrast(120%) sepia(2%) grayscale(90%);
-  -webkit-filter: blur(0px) contrast(120%) sepia(2%) grayscale(90%);
+  filter: blur(8px) brightness(0,4) contrast(100%) sepia(2%) grayscale(90%);
+  -webkit-filter: blur(3px) contrast(100%) sepia(2%) grayscale(90%) opacity(90%);
   height: 100vh;
   background-position: center;
   background-size: cover;
@@ -23,7 +32,13 @@ body, html {
 	outline: inherit;
 }
 
-.audio-player__buttons img {
+.change-buttons {
+  display: flex;
+  margin-right: 25px;
+  flex-direction: column;
+}
+
+.audio-player__buttons img, .change-buttons img {
   width: 30px;
   height: 30px;
   opacity: 1;
@@ -31,7 +46,7 @@ body, html {
 }
 
 .audio-player {
-  background-color: rgb(124, 122, 122);
+  background: radial-gradient(circle, rgba(136, 159, 172, 0.596) 0%, rgba(176, 192, 191, 0.644) 100%);
   position: absolute;
   display: block;
   width: 400px;
@@ -50,9 +65,21 @@ body, html {
 }
 
 .audio-player__controls {
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 20px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+h3 {
+  text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+  position: absolute;
+  top: -60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .audio-player__image-window {
@@ -76,7 +103,7 @@ input {
   margin: 18px 0;
   width: 200px;
   height: 5px;
-  margin-left: 50px;
+  background-color: rgba(147, 240, 228, 0.507);
 }
 
 input::-webkit-slider-thumb {
@@ -86,3 +113,22 @@ input::-webkit-slider-thumb {
   cursor: pointer;
   appearance: none;
 }
+
+.rangeInput {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.rangeInput__currentTime {
+  position: absolute;
+  bottom: -5px;
+}
+
+.rageInput__endTime {
+  position: absolute;
+  bottom: 27px;
+  left: 80%;
+}
+
