--- a/js30#1.2-audio-player/styles.css
+++ b/js30#1.2-audio-player/styles.css
@@ -3,7 +3,6 @@ body, html {
   margin: 0px;
 }
 
-
 p {
   padding: 0px;
   margin: 0px;
@@ -18,6 +17,7 @@ p {
   filter: blur(8px) brightness(0,4) contrast(100%) sepia(2%) grayscale(90%);
   -webkit-filter: blur(3px) contrast(100%) sepia(2%) grayscale(90%) opacity(90%);
   height: 100vh;
+  min-height: 450px;
   background-position: center;
   background-size: cover;
 }
