--- a/js30#1.2-audio-player/styles.css
+++ b/js30#1.2-audio-player/styles.css
@@ -30,28 +30,32 @@ p {
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
+  position: relative
 }
+
 
 .change-buttons {
   display: flex;
-  margin-right: 25px;
   flex-direction: column;
 }
 
 .audio-player__buttons img, .change-buttons img {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   opacity: 1;
   transition: opacity 0.3s ease-in-out;
 }
 
 .play img {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
 }
 
 .audio-player {
-  background: radial-gradient(circle, rgba(136, 159, 172, 0.596) 0%, rgba(176, 192, 191, 0.644) 100%);
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.815);
   position: absolute;
   display: block;
   width: 400px;
@@ -64,27 +68,28 @@ p {
   border-top-right-radius: 10%;
 }
 
-.play {
-  margin-left: 15px;
-}
-
 .audio-player__controls {
   margin-top: 50px;
-  margin-bottom: 20px;
+  padding-top: 10px;
+  margin-bottom: 10px;
   display: flex;
-  justify-content: space-between;
+  border-radius: 15px;
+  justify-content: space-evenly;
   align-items: center;
   position: relative;
 }
 
 h3 {
   display: block;
-  text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+  text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
   position: absolute;
   top: -60%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  font-family: 'Fuzzy Bubbles';
+  font-weight: 700;
+  font-size: 21px;
 }
 
 .audio-player__image-window {
@@ -93,7 +98,6 @@ h3 {
   background-repeat: no-repeat;
   width: 100%;
   height: 400px;
-  border-radius: 2%;
   border-top-left-radius: 10%;
   border-top-right-radius: 10%;
 }
@@ -109,17 +113,17 @@ input {
   margin: 18px 0;
   width: 200px;
   height: 5px;
-  background-color: rgba(44, 44, 44, 0.459);
+  background-color: #fff9f9bc;
   cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.801);
 }
 
 input::-webkit-slider-thumb {
   display: inherit;
-  box-shadow: -125px 0 0 120px #fff9f9bc;
-  height: 5px;
-  width: 5px;
-  border-radius: 100%;
-  background: #000000bc;
+  box-shadow: -125px 0 0 120px rgba(0, 0, 0, 0.507);
+  height: 6px;
+  width: 6px;
+  background: #000000;
   cursor: pointer;
   appearance: none;
 }
