fix: fix timer on new item set

--- a/js30#1.2-audio-player/styles.css
+++ b/js30#1.2-audio-player/styles.css
@@ -138,6 +138,7 @@ input::-webkit-slider-thumb {
 .rangeInput__currentTime {
   position: absolute;
   bottom: -5px;
+  width: 42px;
 }
 
 .rageInput__endTime {
